Adds fr-FR language for v0.9.11

--- a/language/fr-FR/fr-FR.plg_system_bfstop.ini
+++ b/language/fr-FR/fr-FR.plg_system_bfstop.ini
@@ -1,9 +1,9 @@
-; Traduit pour la version 0.9.11 par Flying_Lolo - 31/05/2013
+; Traduit pour la version 0.9.11 par Flying_Lolo - 09/06/2013
 ; Encodage UTF-8 - No BOM
 ; Fichier de traduction pour ./plugins/system/
 
 FAILED_LOGIN_ATTEMPT="%s: Tentative de connexion %s"
-USERNAME="Identifiant d'utilisateur"
+USERNAME="ID.Utilisateur"
 IPADDRESS="Addresse IP"
 ERROR="Erreur"
 DATETIME="Date et heure"
