--- a/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
+++ b/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
@@ -1,25 +1,25 @@
-; Traduit pour la version 0.9.11 par Flying_Lolo - 31/05/2013
+; Traduit pour la version 0.9.11 par Flying_Lolo - 09/06/2013
 ; Encodage UTF-8 - No BOM
-; Fichier de traduction pour ./plugins/system/
+; Fichier de traduction pour ./plugins/system/bfstop/language/fr-FR/
 
-PLG_SYSTEM_BFSTOP="Systeme Brute Force Stop"
-PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Ce plug-in fournit des moyens pour prévenir des attaques de votre site Joomla. À cette fin, le plug-in stocke des informations sur les échecs de connexion, de sorte qu'au terme d'un certain nombre (configurable) de tentatives l'adresse IP de l'attaquant peut être bloquée. En outre, vous pouvez configurer la notification des connexions échouées et des adresses bloquées, aussi bien qu'un retard variable pour une tentative de connexion échouée.</div><br /><div><em>N'oubliez pas de configurer et de publier ce plugin après installation!</em><br />Si vous avez des questions, merci de visiter le <a href='https://github.com/codeling/bfstop'>site du projet sur github</a>. En cas de difficultés d'utilisation, n'hésitez pas à les rapporter sur <a href='https://github.com/codeling/bfstop/issues'>ici </a>!</div><br /><div>En partie, ce plugin s'inspire des plugins suivants: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Merci beaucoup aux auteurs de ces plugins!<br />Brute Force Stop est un plugin <a target='_blank' href='http://www.joomla.org/'>Joomla!</a>, publié sous la <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
-BLOCK_ENABLED_LABEL="Activation du Blocage"
+PLG_SYSTEM_BFSTOP="System - Brute Force Stop"
+PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Ce plug-in fournit des moyens pour prévenir des attaques de votre site Joomla. À cette fin, le plug-in stocke des informations sur les échecs de connexion, de sorte qu'au terme d'un certain nombre (configurable) de tentatives l'adresse IP de l'attaquant peut être bloquée. En outre, vous pouvez configurer la notification des connexions échouées et des adresses bloquées, aussi bien qu'un délai variable entre chaque tentative de connexion autorisée.</div><br /><div><em>N'oubliez pas de configurer et de publier ce plugin après installation!</em><br />Si vous avez des questions, merci de visiter le <a href='https://github.com/codeling/bfstop'>site du projet sur github</a>. En cas de difficultés d'utilisation, n'hésitez pas à les rapporter <a href='https://github.com/codeling/bfstop/issues'>ici </a>!</div><br /><div>Ce plugin s'inspire pour partie des plugins suivants: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Merci beaucoup aux auteurs de ces plugins!<br />Brute Force Stop est un plugin <a target='_blank' href='http://www.joomla.org/'>Joomla!</a>, publié sous la <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
+BLOCK_ENABLED_LABEL="Activation du blocage"
 BLOCK_ENABLED_DESC="Active le blocage des adresses IP. En cas de désactivation, aucune nouvelle adresse IP ne sera ajoutée à la liste des adresses bloquées. Même les adresses IP déjà listées ne seront pas bloquées, mais la liste elle-même sera conservée."
-EMAIL_SOURCE_LABEL="Courriel de provenance"
-EMAIL_SOURCE_DESC="Choisissez l'adresse électronique de provenance des notifications"
+EMAIL_SOURCE_LABEL="Adresse de notification"
+EMAIL_SOURCE_DESC="Adresse électronique où seront transmises les notifications"
 USERID_LABEL="Sélection de l'utilisateur"
-USERID_DESC="Indiquez l'utilisateur auquel vous souhaitez que les notifications soient transmises."
-EMAIL_ADDRESS_LABEL="Courriel"
-EMAIL_ADDRESS_DESC="Indiquez l'adresse électronique où vous souhaitez que les notifications soient transmises."
-NOTIFY_FAILED_NUMBER_LABEL="Messages d'echec de connexion par jour"
-NOTIFY_FAILED_NUMBER_DESC="Combien d'echecs de connexion notifier chaque jour?"
-NOTIFY_BLOCKED_NUMBER_LABEL="Messages de blocage d'adresse IP par jour"
-NOTIFY_BLOCKED_NUMBER_DESC="Combien de blocages d'addresse IP notifier chaque jour?"
-DELAY_DURATION_LABEL="Retard"
-DELAY_DURATION_DESC="Retard (en secondes) sur echec de connexion"
+USERID_DESC="Utilisateur dont l'adresse électronique est utilisée en tant qu'adresse destinataire des courriels de notification (sous réserve que l'adresse de notification ci-dessus soit configurée en mode 'Utilisateur sélectionné')."
+EMAIL_ADDRESS_LABEL="Courriel personnalisé"
+EMAIL_ADDRESS_DESC="Adresse électronique personnalisée utilisée en tant qu'adresse destinataire des courriels de notification (sous réserve que l'adresse de notification ci-dessus soit configurée en mode 'Courriel personnalisé')."
+NOTIFY_FAILED_NUMBER_LABEL="Notification des échecs de connexion (msg/j)"
+NOTIFY_FAILED_NUMBER_DESC="Combien d'échecs de connexion au maximum notifier par jour ?"
+NOTIFY_BLOCKED_NUMBER_LABEL="Notification des blocages d'adresses IP (msg/j)"
+NOTIFY_BLOCKED_NUMBER_DESC="Combien de blocages d'addresses IP au maximum notifier par jour ?"
+DELAY_DURATION_LABEL="Délai de reconnexion"
+DELAY_DURATION_DESC="Délai (en secondes) avant nouvelle tentative de connexion autorisée"
 LOGGING_ENABLED_LABEL="Journal d'activité"
-LOGGING_ENABLED_DESC="Active le journal d'activité (nécessaire en cas de difficultés; le fichier journal se trouve dans le répertoire des logs sous le nom plg_system_bfstop.log.php)"
+LOGGING_ENABLED_DESC="Active le journal d'activité (nécessaire en cas de difficultés; le fichier journal se trouve dans le répertoire des logs sous le nom 'plg_system_bfstop.log.php')"
 BLOCK_NUMBER_LABEL="Seuil de blocage"
 BLOCK_NUMBER_DESC="Nombre de tentatives autorisées avant blocage"
 BLOCKED_MESSAGE_LABEL="Message de blocage"
@@ -27,9 +27,9 @@ BLOCKED_MESSAGE_DESC="Le message à faire apparaître dans le navigateur de l'ut
 BLOCK_DURATION_LABEL="Durée de blocage"
 BLOCK_DURATION_DESC="Configuration de la durée de blocage de l'adresse IP avant réouverture de l'accès"
 NOTIFY_REMAINING_ATTEMPTS_LABEL="Affichage du nombre de tentatives restantes"
-NOTIFY_REMAINING_ATTEMPTS_DESC="Active ou désactive la notification utilisateur du nombre de tentatives autorisées avant blocage; en cas d'activation, l'utilisateur recevra, après chaque tentative de connexion, un message dans la fenêtre de connexion l'informant du nombre de tentatives restantes avant blocage. Cette option n'est naturellement pas pertinente si l'option de blocage n'est pas activée."
-NOTIFY_BLOCKED_USER_LABEL="Message utilisateur en cas de blocage"
-NOTIFY_BLOCKED_USER_DESC="Lorsque cette option est activée, en cas de blocage d'une adresse IP, un message sera transmis, le cas échéant, à l'utilisateur dont l'identifiant utilisateur aura été utilisé lors des tentatives de connexion."
+NOTIFY_REMAINING_ATTEMPTS_DESC="Active ou désactive la notification utilisateur du nombre de tentatives autorisées avant blocage; en cas d'activation, l'utilisateur reçoit, après chaque tentative de connexion, un message dans la fenêtre de connexion l'informant du nombre de tentatives restantes avant blocage. Cette option n'est naturellement pas pertinente si l'option de blocage n'est pas activée."
+NOTIFY_BLOCKED_USER_LABEL="Message à l'utilisateur impacté"
+NOTIFY_BLOCKED_USER_DESC="En cas de blocage d'une adresse IP, lorsque cette option est activée, un message sera transmis, le cas échéant, à l'utilisateur dont l'identifiant aura été utilisé lors des tentatives de connexion."
 SELECTEDUSERS="Utilisateur sélectionné"
 CUSTOMEMAILADDRESS="Courriel personnalisé"
 ENABLED="activé"
@@ -46,3 +46,12 @@ BLOCK_2HOURS="2 Heures"
 BLOCK_4HOURS="4 Heures"
 BLOCK_8HOURS="8 Heures"
 BLOCK_24HOURS="1 Jour"
+; Ajouté à compter de la version 0.9.11
+MAX_BLOCKS_BEFORE_LABEL="Déclenchement du blocage permanent"
+MAX_BLOCKS_BEFORE_DESC="Permet la mise en place d'un blocage permanent au terme d'un certain nombre de blocages temporaires (les blocages résolus via l'interface d'administration ne sont pas comptabilisés)."
+MAX_BLOCK_NEVER="Jamais"
+ENABLED_FOR_ORIGIN_LABEL="Activé pour"
+ENABLED_FOR_ORIGIN_DESC="Permet de sélectionner les points d'entrée où le contrôle d'accés doit être mis en place : interface d'administration et/ou frontal du site. Si le contrôle d'accès est mis en place sur un seul point d'entrée, alors les accès via le point d'entrée non contrôlé ne pourront être pris en compte dans le contrôle d'accès (par exemple, en cas de contrôle mis en place au niveau de la seule interface d'administration, les tentatives d'accès via le frontal du site ne seront pas prises en compte. De même, des connexions réussies via le frontal du site ne pourront pas remettre a zéro le compteur d'accès incrémenté au niveau de l'interface d'administration). Lorsqu'un blocage est déclenché, veuillez également noter que celui-ci affectera la totalité du site (frontal et administration) quel que soit le point d'entrée contrôlé."
+ENABLED_FOR_FRONTEND="Frontal uniquement"
+ENABLED_FOR_BACKEND="Administration uniquement"
+ENABLED_FOR_BOTH="Frontal ET Administration"
