--- a/language/ca-ES/ca-ES.plg_system_bfstop.ini
+++ b/language/ca-ES/ca-ES.plg_system_bfstop.ini
@@ -1,13 +1,13 @@
 ;traducció feta per nouespai 30-04-2013
 
-FAILED_LOGIN_ATTEMPT="Intent d'identificació erroni a %s"
+FAILED_LOGIN_ATTEMPT="%s: Intent d'identificació erroni a %s"
 USERNAME="Nom d'usuari"
 IPADDRESS="Adreça IP"
 ERROR="Error"
 DATETIME="Dia i hora"
 ORIGIN="Origen"
-BLOCKED_IP_ADDRESS_BODY="El bloqueig de l'adreçça IP %s ha estat perquè hi havia massa intents fallits d'ingressar en poc temps. Aquests són els intents de:\n\n%s"
-BLOCKED_IP_ADDRESS_SUBJECT="Adreça IP bloquejada %s"
+BLOCKED_IP_ADDRESS_BODY="%2$s: El bloqueig de l'adreçça IP %1$s ha estat perquè hi havia massa intents fallits d'ingressar en poc temps. Aquests són els intents de:\n\n%3$s"
+BLOCKED_IP_ADDRESS_SUBJECT="%s: Adreça IP bloquejada %s"
 BLOCKED_IP_MESSAGE="La teva adreça IP ha estat bloquejada perquè hi havia massa intents fallits d'ingressar en molt poc temps."
 X_ATTEMPTS_LEFT="Et resten %d intent(s) d'ingressar abans que la teva adreça IP sigui bloquejada. Si no recordes el nom o contrasenya, pots demanar al sistema que te la torni a enviar"
 BLOCKED_SUBJECT="%s: Intents fallits d'inici de sessió"
