--- a/language/es-ES/es-ES.plg_system_bfstop.sys.ini
+++ b/language/es-ES/es-ES.plg_system_bfstop.sys.ini
@@ -51,3 +51,11 @@ ENABLED_FOR_ORIGIN_DESC="Determina en qué partes del sistema de Joomla! el plug
 ENABLED_FOR_FRONTEND="Solo Frontend"
 ENABLED_FOR_BACKEND="Solo Backend"
 ENABLED_FOR_BOTH="Frontend y Backend"
+MAX_BLOCKS_BEFORE_LABEL="Permanente"
+MAX_BLOCKS_BEFORE_DESC="Determina después de cuántos intentos fracasados establece un bloqueo permanente. Los bloqueos anulados también cuentan; sólo aquellos bloqueos realizados por la parte del backend serán ignorados."
+MAX_BLOCK_NEVER="Nunca"
+ENABLED_FOR_ORIGIN_LABEL="Activo para"
+ENABLED_FOR_ORIGIN_DESC="Determina en qué partes del sistema de Joomla! el plugin debería estar activo. Si elige frontend o backend, la otra parte no será considerada (por ejemplo, si ha configurado sólo backend, los intentos fallidos de inicio de frontend no se registrarán, pero tampoco las conexiones acertadas en el frontend reinicializarán el contador de conexión fracasado). Por favor tenga en cuenta que el bloqueo siempre afecta a todo el sitio, sin importar lo que elija.!"
+ENABLED_FOR_FRONTEND="Solo Frontend"
+ENABLED_FOR_BACKEND="Solo Backend"
+ENABLED_FOR_BOTH="Frontend y Backend"
