log level setting instead of simple enable/disable switch

--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -14,8 +14,8 @@ NOTIFY_BLOCKED_NUMBER_LABEL="Blockiert-Nachrichten"
 NOTIFY_BLOCKED_NUMBER_DESC="Wie oft an einem Tag maximal eine Benachrichtigung über blockierte IP-Adressen gesendet werden soll."
 DELAY_DURATION_LABEL="Verzögerung"
 DELAY_DURATION_DESC="Verzögerung (in Sekunden) bei einem fehlgeschlagenen Login-Versuch"
-LOGGING_ENABLED_LABEL="Logging"
-LOGGING_ENABLED_DESC="Ob eine Logdatei über die Aktivitäten des Plugins angelegt werden soll (dies sollte nur im Fehlerfall notwendig sein; die Logdatei findet sich im logs-Verzeichnis unter dem Namen plg_system_bfstop.log.php)"
+LOGLEVEL_LABEL="Logging"
+LOGLEVEL_DESC="Bestimmt ob eine Logdatei über die Aktivitäten des Plugins angelegt werden soll (dies sollte nur im Fehlerfall notwendig sein; die Logdatei findet sich im logs-Verzeichnis unter dem Namen plg_system_bfstop.log.php); weiters bestimmt diese Einstellung, wie viel Informationen im Logfile festgehalten werden; je weiter unten in der Liste, desto detailliertere Informationen wird das Logfile enthalten. Ein guter Standard-Wert ist wahrscheinlich 'Warnung' - hier werden alle Warnungen, Fehler und fatalen Fehler im Logfile festgehalten."
 BLOCK_NUMBER_LABEL="Sperrschwelle"
 BLOCK_NUMBER_DESC="Wie oft ein Login von derselben IP-Adresse aus versucht werden kann bevor diese IP-Adresse gesperrt wird."
 BLOCKED_MESSAGE_LABEL="Sperrnachricht"
@@ -50,3 +50,6 @@ ENABLED_FOR_ORIGIN_DESC="Bestimmt für welche Teile des Joomla!-Systems das Plug
 ENABLED_FOR_FRONTEND="Nur Frontend"
 ENABLED_FOR_BACKEND="Nur Backend"
 ENABLED_FOR_BOTH="Frontend und Backend"
+FATAL="Fatale Fehler"
+INFO="Zusätzliche Information"
+DEBUG="Detailliertes Log"
