--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -14,8 +14,8 @@ NOTIFY_BLOCKED_NUMBER_LABEL="Blocked msgs per day"
 NOTIFY_BLOCKED_NUMBER_DESC="How often to notify about a blocked IP during one day"
 DELAY_DURATION_LABEL="Delay"
 DELAY_DURATION_DESC="Delay (in seconds) on a failed login attempt"
-LOGGING_ENABLED_LABEL="Logging"
-LOGGING_ENABLED_DESC="Determines whether a Logfile about the activities of the plugin should be created (this should only be necessary in case of a problem; the logfile can be found in the logs directory under the name plg_system_bfstop.log.php)"
+LOGLEVEL_LABEL="Logging"
+LOGLEVEL_DESC="Determines whether a Logfile about the activities of the plugin should be created (this should only be necessary in case of a problem; the logfile can be found in the logs directory under the name plg_system_bfstop.log.php). You can also configure how detailed the log should be; e.g. set to ERROR to only get information about every malfunction into the logfile."
 BLOCK_NUMBER_LABEL="Block threshold"
 BLOCK_NUMBER_DESC="How often a login can be tried until the IP will be blocked"
 BLOCKED_MESSAGE_LABEL="Blocked message"
@@ -50,3 +50,6 @@ ENABLED_FOR_ORIGIN_DESC="Determines for which parts of the Joomla! system the pl
 ENABLED_FOR_FRONTEND="Only Frontend"
 ENABLED_FOR_BACKEND="Only Backend"
 ENABLED_FOR_BOTH="Frontend and Backend"
+FATAL="Fatal error"
+INFO="Informational message"
+DEBUG="Detailed information"
