If enabled, send 403 instead of 200 on block (#38)

--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -26,6 +26,8 @@ NOTIFY_REMAINING_ATTEMPTS_LABEL="Übrige Versuche"
 NOTIFY_REMAINING_ATTEMPTS_DESC="Schaltet die Benachrichtigung über verbleibende Versuche ein; wenn aktiviert, wird im Login-Formular nach einem fehlgeschlagenen Login-Versuch eine Nachricht mit den verbleibenden Login-Versuchen angezeigt. Diese Einstellung wird nur dann berücksichtigt, wenn Sperren eingeschaltet ist (wenn es nicht eingeschaltet ist, gibt es ja auch keine 'verbleibenden' Versuche)"
 NOTIFY_BLOCKED_USER_LABEL="Benutzer-Block-Nachricht"
 NOTIFY_BLOCKED_USER_DESC="Wenn eingeschaltet, wird an die in der Datenbank hinterlegte Email-Adresse eine Nachricht hinterlegt, wenn eine IP-Adresse gesperrt wird (sofern der Benutzername, mit dem das Login versucht wurde, ein existierender war)"
+USE_HTTP_ERROR_LABEL="Verwende HTTP-Fehler"
+USE_HTTP_ERROR_DESC="Wenn aktiviert, wird der HTTP Statuscode 403 (Forbidden) gesendet wenn die IP-Addresse eines Benutzers gesperrt ist."
 SELECTEDUSERS="Gewählter Benutzer"
 CUSTOMEMAILADDRESS="Benutzerdefinierte Email-Adresse"
 ENABLED="aktiviert"
