--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -26,6 +26,8 @@ NOTIFY_REMAINING_ATTEMPTS_LABEL="Remaining attempts"
 NOTIFY_REMAINING_ATTEMPTS_DESC="Enables or disables notifications about remaining attempts; if enabled, the user will, after each failed login attempt, see a message in the login form about how many login attempts still are available before the IP address will be blocked. This setting is only active if blocking is enabled (if blocking is disabled, 'remaining' entries wouldn't make sense)."
 NOTIFY_BLOCKED_USER_LABEL="User Block Message"
 NOTIFY_BLOCKED_USER_DESC="When turned on, in case of a blocked IP address, a notification will be sent to the user which tried to log in (only of course in case it is an existing username)."
+USE_HTTP_ERROR_LABEL="Use HTTP Error"
+USE_HTTP_ERROR_DESC="If enabled, bfstop will send a status code 403 (Forbidden) if the users' IP address is blocked"
 SELECTEDUSERS="Selected User"
 CUSTOMEMAILADDRESS="Custom Email Address"
 ENABLED="enabled"
