Language updates (ca-ES, es-ES, fr-FR; added ru-RU; fixed xml lang refs)

--- a/language/ca-ES/ca-ES.plg_system_bfstop.sys.ini
+++ b/language/ca-ES/ca-ES.plg_system_bfstop.sys.ini
@@ -28,6 +28,8 @@ NOTIFY_REMAINING_ATTEMPTS_LABEL="Intents restants"
 NOTIFY_REMAINING_ATTEMPTS_DESC="Activa o desactiva les notificacions sobre els intents restants. Si està habilitat, l'usuari, després de cada intent fallit d'inici de sessió, veurà un missatge en el formulari d'accés de quants intents d'inici de sessió encara estan disponibles abans que es bloquegi l'adreça IP. Aquest ajust només s'activa si s'ha habilitat el bloqueig (si el bloqueig està desactivat, les entrades 'restants' no tindrien sentit)."
 NOTIFY_BLOCKED_USER_LABEL="Missatge a l'usuari bloquejat"
 NOTIFY_BLOCKED_USER_DESC="Quan s'activa, en cas d'una adreça IP bloquejada, la notificació s'enviarà a l'usuari que va intentar connectar (només per descomptat, en cas que sigui un nom d'usuari existent)."
+USE_HTTP_ERROR_LABEL="Utilitza Error"
+USE_HTTP_ERROR_DESC="Si està activat, bfstop enviarà un codi d'estat 403 (prohibit) si l'adreça IP dels usuaris està bloquejada"
 SELECTEDUSERS="L'usuari seleccionat"
 CUSTOMEMAILADDRESS="Adreça de correu electrònic personalitzada"
 ENABLED="Activat"
