--- a/language/es-ES/es-ES.plg_system_bfstop.sys.ini
+++ b/language/es-ES/es-ES.plg_system_bfstop.sys.ini
@@ -26,6 +26,8 @@ NOTIFY_REMAINING_ATTEMPTS_LABEL="Tentativas restantes"
 NOTIFY_REMAINING_ATTEMPTS_DESC="Permite o no notificaciones sobre tentativas restantes; de ser permitido, el usuario, después de cada tentativa de entrada al sistema fracasada, verá un mensaje sobre cuántas tentativas quedán disponibles antes de que la dirección IP sea bloqueada. Este ajuste es sólo activo si el bloqueo está permitido (si el bloqueo está desactivado, las entradas 'restantes' no tendrían sentido)."
 NOTIFY_BLOCKED_USER_LABEL="Mensaje de bloqueo de usuario"
 NOTIFY_BLOCKED_USER_DESC="Si se marca, en caso de una dirección de IP bloqueada, será enviada una notificación al usuario que trató de entrar al sistema)."
+USE_HTTP_ERROR_LABEL="Utilice Error HTTP"
+USE_HTTP_ERROR_DESC="Si está activado, bfstop enviará un código de estado 403 (prohibido) si la dirección IP de los usuarios queda bloqueada"
 SELECTEDUSERS="Usuario seleccionado"
 CUSTOMEMAILADDRESS="Dirección de correo electrónico"
 ENABLED="Permitido"
