--- a/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
+++ b/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
@@ -1,4 +1,4 @@
-; Traduit pour la version 0.9.11 par Flying_Lolo - 09/06/2013
+; Traduit pour la version 1.0.0 Beta1 par Flying_Lolo - 07/08/2013
 ; Encodage UTF-8 - No BOM
 ; Fichier de traduction pour ./plugins/system/bfstop/language/fr-FR/
 
@@ -18,8 +18,8 @@ NOTIFY_BLOCKED_NUMBER_LABEL="Notification des blocages d'adresses IP (msg/j)"
 NOTIFY_BLOCKED_NUMBER_DESC="Combien de blocages d'addresses IP au maximum notifier par jour ?"
 DELAY_DURATION_LABEL="Délai de reconnexion"
 DELAY_DURATION_DESC="Délai (en secondes) avant nouvelle tentative de connexion autorisée"
-LOGGING_ENABLED_LABEL="Journal d'activité"
-LOGGING_ENABLED_DESC="Active le journal d'activité (nécessaire en cas de difficultés; le fichier journal se trouve dans le répertoire des logs sous le nom 'plg_system_bfstop.log.php')"
+LOGLEVEL_LABEL="Journal d'activité"
+LOGLEVEL_DESC="Active le journal d'activité (nécessaire en cas de difficultés; le fichier journal se trouve dans le répertoire des logs sous le nom 'plg_system_bfstop.log.php')"
 BLOCK_NUMBER_LABEL="Seuil de blocage"
 BLOCK_NUMBER_DESC="Nombre de tentatives autorisées avant blocage"
 BLOCKED_MESSAGE_LABEL="Message de blocage"
@@ -55,3 +55,9 @@ ENABLED_FOR_ORIGIN_DESC="Permet de sélectionner les points d'entrée où le con
 ENABLED_FOR_FRONTEND="Frontal uniquement"
 ENABLED_FOR_BACKEND="Administration uniquement"
 ENABLED_FOR_BOTH="Frontal ET Administration"
+FATAL="Erreur fatale"
+INFO="Message d'information"
+DEBUG="Information détaillée"
+; Ajouté à compter de la version 1.0.0 Beta
+USE_HTTP_ERROR_LABEL="Utiliser les codes erreur HTTP"
+USE_HTTP_ERROR_DESC="Si cette option est activée, bfstop enverra un code erreur 403 (accès interdit) à l'utilisateur d'une adresse IP bloquée"
