Updates nl-NL translation to 0.9.11

--- a/language/nl-NL/nl-NL.plg_system_bfstop.ini
+++ b/language/nl-NL/nl-NL.plg_system_bfstop.ini
@@ -4,9 +4,9 @@ IPADDRESS="IP-Addres"
 ERROR="Fout"
 DATETIME="Datum en tijd"
 ORIGIN="Oorsprong"
-BLOCKED_IP_ADDRESS_BODY="%2$s: IP Address %1$s geblokkeerd omdat er te veel mislukte inlogpogingen in een korte tijd zijn geweest. Dit zijn de opgingen:\n\n%3$s"
-BLOCKED_IP_ADDRESS_SUBJECT="%s: Geblokkeerd IP Addres %s"
-BLOCKED_IP_MESSAGE="Uw IP-adres is geblokkeerd omdat er te veel mislukte inlogpogingen in een korte tijd zijn geweest."
-X_ATTEMPTS_LEFT="Je hebt %d poging(en) over voordat je IP addres word geblokkeerd"
+BLOCKED_IP_ADDRESS_BODY="%2$s: IP Address %1$s geblokkeerd omdat er te veel mislukte inlogpogingen in een korte tijd zijn geweest. Dit zijn de pogingen:\n\n%3$s"
+BLOCKED_IP_ADDRESS_SUBJECT="%s: Geblokkeerd IP adres %s"
+BLOCKED_IP_MESSAGE="Uw IP-adres is geblokkeerd omdat er te veel mislukte inlogpogingen in een korte tijd geweest zijn."
+X_ATTEMPTS_LEFT="U heeft %d poging(en) over voordat uw IP adres geblokkeerd wordt."
 BLOCKED_SUBJECT="%s: Mislukte login pogingen"
-BLOCKED_BODY="Hi!\n\nIemand probeert aan te melden met uw gebruikersnaam op de website '%s', maar een onjuist wachtwoord is gebruikt.\nDit is gebeurd zo vaak dat het systeem toegang heeft geblokkeerd vanaf het IP-adres waar deze login pogingen ontstonden om misbruik te voorkomen.\n\nIn het geval u het niet was die deze login pogingen deed, kunt u dit bericht negeren. U kunt nog inloggen zoals gebruikelijk.\nZijn het wel jou login pogingen, en je weet nu ofwel het wachtwoord opnieuw of je wilt de 'Reset wachtwoord' functie gebruiken, heb je de kans om de blokkering van het IP-adres op te heffen door te klikken op deze link:\n%s\n\nMet vriendelijke groet, de automatische websitebeheerder\n\nAtentie: Dit is een automatisch gegenereerd bericht."
+BLOCKED_BODY="Hallo!\n\nIemand probeert aan te melden op website '%s' met uw gebruikersnaam, maar daarbij is een onjuist wachtwoord gebruikt.\nDit is zo vaak gebeurd dat het systeem de toegang heeft geblokkeerd voor het IP-adres waar vandaan deze loginpogingen gedaan zijn. Deze blokkade is om verder misbruik te voorkomen.\n\nIndien u niet zelf deze loginpogingen deed, kunt u dit bericht negeren. U kunt nog altijd inloggen zoals gebruikelijk want dan is uw IP adres niet geblokkeerd.\nWaren het wel uw login pogingen en u weet nu ofwel alsnog het goede wachtwoord of u wilt de 'Reset wachtwoord' functie gebruiken, dan heeft u de mogelijkheid de blokkering van uw IP-adres op te heffen door op deze link te klikken:\n%s\n\nMet vriendelijke groet, de automatische websitebeheerder.\n\nAttentie: Dit is een automatisch gegenereerd bericht."
