--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.0.0 (2013-08-18)
+  - fix error when php compiled without openssl, using mcrypt or mt_rand instead
+  - only create unblock token if mail really sent out
+  - Updated translations (ca-ES, es-ES, nl-NL, fr-FR)
+  - Adds ru-RU translations (thanks to Raven)
+
 1.0.0beta1 (2013-08-05)
   - Possibility to send HTTP status code 403 instead of 200 in case of block
   - fix Joomla 3.1.4 compatibility
