Updates nl-NL language for 1.0.0

--- a/language/nl-NL/nl-NL.plg_system_bfstop.sys.ini
+++ b/language/nl-NL/nl-NL.plg_system_bfstop.sys.ini
@@ -26,6 +26,8 @@ NOTIFY_REMAINING_ATTEMPTS_LABEL="Meld resterende pogingen"
 NOTIFY_REMAINING_ATTEMPTS_DESC="Hiermee kiest u of meldingen over resterende pogingen aan of uit moeten. Indien ingeschakeld dan zal de gebruiker na elke mislukte login poging een bericht zien in het aanmeldingsformulier met hoeveel login pogingen nog beschikbaar zijn voordat het IP-adres wordt geblokkeerd. Deze instelling is alleen actief als blokkeren-functie is ingeschakeld (Als blokkeren is uitgeschakeld, zou 'Resterende pogingen' niet zinvol zijn)."
 NOTIFY_BLOCKED_USER_LABEL="Bestaande gebruiker informeren over blokkade"
 NOTIFY_BLOCKED_USER_DESC="Wanneer ingeschakeld zal in het geval van een geblokkeerd IP-adres, een kennisgeving via email worden verzonden naar de gebruiker die probeert aan te melden (natuurlijk alleen in geval het een bestaande gebruikersnaam is)."
+USE_HTTP_ERROR_LABEL="Stuur 'HTTP Error' foutboodschap"
+USE_HTTP_ERROR_DESC="Indien ingeschakeld zal bfstop een HTTP 403 (Forbidden) antwoord sturen naar het IP adres van de geblokkeerde gebruiker, als deze een aanlogpoging doet."
 SELECTEDUSERS="Geselecteerde gebruiker"
 CUSTOMEMAILADDRESS="Zelf te kiezen e-mailadres"
 ENABLED="ingeschakeld"
