ca-ES Language corrections

--- a/language/ca-ES/ca-ES.plg_system_bfstop.sys.ini
+++ b/language/ca-ES/ca-ES.plg_system_bfstop.sys.ini
@@ -16,8 +16,6 @@ NOTIFY_BLOCKED_NUMBER_LABEL="Missatges de bloqueig per dia"
 NOTIFY_BLOCKED_NUMBER_DESC="Amb quina freqüència es notificaran les IP bloquejades en un dia"
 DELAY_DURATION_LABEL="Retard"
 DELAY_DURATION_DESC="Retard (en segons) en un intent d'accés fallit"
-LOGGING_ENABLED_LABEL="Iniciant sessió"
-LOGGING_ENABLED_DESC="Determina si un informe sobre les activitats del connector ha de ser creat (això tan sols serà necessari en cas d'un problema, el fitxer de registre es pot trobar al directori de registres amb el nom plg_system_bfstop.log.php)"
 BLOCK_NUMBER_LABEL="Límit abans de bloquejar"
 BLOCK_NUMBER_DESC="Quantes vegades un usuari pot equivocar-se abans de que es bloquegi la IP"
 BLOCKED_MESSAGE_LABEL="Missatge de bloqueig"
@@ -41,7 +39,6 @@ BLOCK_5MINUTES="5 minuts"
 BLOCK_10MINUTES="10 minuts"
 BLOCK_15MINUTES="15 minuts"
 BLOCK_30MINUTES="30 minuts"
-BLOCK_60MINUTES="60 minuts"
 BLOCK_1HOUR="1 hora"
 BLOCK_2HOURS="2 hores"
 BLOCK_4HOURS="4 hores"
@@ -55,3 +52,8 @@ ENABLED_FOR_ORIGIN_DESC="Determina a quines parts del sistema de Joomla! han de 
 ENABLED_FOR_FRONTEND="Només Frontal"
 ENABLED_FOR_BACKEND="Només Administració"
 ENABLED_FOR_BOTH="Frontal i Administració"
+
+LOGLEVEL_LABEL="Carregant"
+LOGLEVEL_DESC="Determina si un informe sobre les activitats del connector ha de ser creat (això tan sols serà necessari en cas d'un problema, el fitxer de registre es pot trobar al directori de registres amb el nom plg_system_bfstop.log.php). També podeu establir el nivell de detall que ha de tenir el registre, per exemple, estableix ERROR només per obtenir informació sobre qualsevol error en el fitxer de registre."
+INFO="Missatge informatiu"
+DEBUG="Informació detallada"
