Fixes #44 (Adds Note that all attacks are shown in block notification)

--- a/language/de-DE/de-DE.plg_system_bfstop.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.ini
@@ -4,7 +4,7 @@ IPADDRESS="IP-Adresse"
 ERROR="Fehler"
 DATETIME="Zeitpunkt"
 ORIGIN="Quelle"
-BLOCKED_IP_ADDRESS_BODY="Die IP Adresse %1$s wurde aufgrund zu vieler fehlgeschlagener Login-Versuche auf %2$s gesperrt! Die Login-Versuche:\n\n%3$s"
+BLOCKED_IP_ADDRESS_BODY="Die IP Adresse %1$s wurde aufgrund zu vieler fehlgeschlagener Login-Versuche auf %2$s gesperrt! Login-Versuche, die von dieser IP-Adresse aufgezeichnet wurden:\n\n%3$s\n\nHinweis: Es könnten mehr Versuche angeführt sein als die, die zur Blockierung beitrugen, wenn es frühere Versuche gab, die z.B. bereits früher eine Blockade ausgelöst haben, oder zu weit auseinander lagen um eine Blockierung zu verursachen!"
 BLOCKED_IP_ADDRESS_SUBJECT="%s: IP-Adresse %s gesperrt"
 BLOCKED_IP_MESSAGE="Deine IP-Addresse wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt."
 X_ATTEMPTS_LEFT="Du hast noch %d Versuch(e) bevor deine IP-Adresse blockiert wird!"
