--- a/language/en-GB/en-GB.plg_system_bfstop.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.ini
@@ -4,7 +4,7 @@ IPADDRESS="IP-Address"
 ERROR="Error"
 DATETIME="Date and time"
 ORIGIN="Origin"
-BLOCKED_IP_ADDRESS_BODY="Blocked IP Addresss %1$s because there were too many unsuccessful login attempts in a short time on %2$s. These are the attempts:\n\n%3$s"
+BLOCKED_IP_ADDRESS_BODY="Blocked IP Addresss %1$s because there were too many unsuccessful login attempts in a short time on %2$s. These are all the attempts from that address that were recorded:\n\n%3$s\n\nNotice: This might be more than those causing the block; there might have been attempts further back, which already caused a temporary block then, or which were further apart than what is considered for blocking!"
 BLOCKED_IP_ADDRESS_SUBJECT="%s: Blocked IP Address %s"
 BLOCKED_IP_MESSAGE="Your IP address has been blocked because there were too many unsuccessful login attempts in a short time."
 X_ATTEMPTS_LEFT="You have %d attempt(s) left before your IP address will be blocked"
