Possibility to purge old entries (fix #37)

--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -55,3 +55,5 @@ ENABLED_FOR_BOTH="Frontend und Backend"
 FATAL="Fatale Fehler"
 INFO="Zusätzliche Information"
 DEBUG="Detailliertes Log"
+DELETE_OLD_ENTRIES_LABEL="Löschen alter Einträge"
+DELETE_OLD_ENTRIES_DESC="Lösche Einträge älter als die in diesem Feld eingegebene Anzahl an Wochen (auf 0 setzen um keine alten Einträge zu löschen)."
