--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -55,3 +55,5 @@ ENABLED_FOR_BOTH="Frontend and Backend"
 FATAL="Fatal error"
 INFO="Informational message"
 DEBUG="Detailed information"
+DELETE_OLD_ENTRIES_LABEL="Delete old entries"
+DELETE_OLD_ENTRIES_DESC="Delete entries older than the number of weeks given in this field (set to 0 to disable deletion of old entries)."
