Fixes #40 (adaptive delay)

--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -57,3 +57,12 @@ INFO="Zusätzliche Information"
 DEBUG="Detailliertes Log"
 DELETE_OLD_ENTRIES_LABEL="Löschen alter Einträge"
 DELETE_OLD_ENTRIES_DESC="Lösche Einträge älter als die in diesem Feld eingegebene Anzahl an Wochen (auf 0 setzen um keine alten Einträge zu löschen)."
+ADAPTIVE_DELAY_LABEL="Adaptives Delay"
+ADAPTIVE_DELAY_DESC="Aktivieren um die Verzögerung bei fehlgeschlagenen Login-Versuchen automatisch an die derzeitige Anzahl an fehlgeschlagenen Logins anzupassen. Wird die Verzögerung angepasst erhöhen wann immer eine erhöhte Anzahl an fehlgeschlagenen Login-Versuchen festgestellt wird, als Gegenmaßnahme gegen verteilte Attacken."
+ADAPTIVE_DELAY_MAX_LABEL="Maximal-Verzögerung"
+ADAPTIVE_DELAY_MAX_DESC="Die maximale Verzögerung der Antwort bei fehlgeschlagenen Nachrichten wenn die adaptive Verzögerung aktiviert ist."
+ADAPTIVE_DELAY_THRSH_MIN_LABEL="Untere Schwelle"
+ADAPTIVE_DELAY_THRSH_MIN_DESC="Die untere Schwelle ab der die adaptive Verzögerung aktiv wird (gemessen in fehlgeschlagenen Logins in der letzten Stunde)"
+ADAPTIVE_DELAY_THRSH_MAX_LABEL="Obere Schwelle"
+ADAPTIVE_DELAY_THRSH_MAX_DESC="Die Schwelle ab der die adaptive Verzögerung die maximale Verzögerung erreichen soll (gemessen in fehlgeschlagenen Logins in der letzten Stunde)"
+DELAY_FIELDSET_LABEL="Verzögerung"
